# academic-tracker

./: .gitignore  CLAUDE.md  LICENSE  README.md  academic-tracker.spec  build_desktop.ps1  package-lock.json  package.json
backend/: alembic.ini  desktop.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1de84fc98532_add_pendiente_estado.py  7270512768b4_add_hora_to_evaluacion.py  7b752e7e9ce2_add_codigo_to_materia.py  91530e4419d7_add_dia_hora_to_clase.py  ae8034525350_add_duracion_to_materia.py  b23c34b4f379_initial.py  b9cad2fe0f98_add_correlatividades.py
backend/app/: config.py  db.py  main.py
backend/app/api/: analytics.py  carreras.py  clases.py  config_asistencia.py  correlativas.py  cronograma.py  evaluaciones.py  importer.py  materias.py  plan.py  router.py  semestres.py
backend/app/models/: __init__.py  carrera.py  clase.py  config_asistencia.py  correlatividad.py  evaluacion.py  materia.py  semestre.py
backend/app/schemas/: carrera.py  clase.py  config_asistencia.py  correlatividad.py  evaluacion.py  materia.py  semestre.py
backend/app/services/: analytics.py  base.py  importer.py
backend/tests/: conftest.py  test_api.py  test_importer.py  test_models.py
docs/: README.md  api_referencia.md  arquitectura.md  backend.md  base_de_datos.md  build_exe.md  frontend.md  guia_desarrollo.md  guia_usuario.md  schemas.md  tests.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/context/: CarreraContext.tsx
frontend/src/hooks/: useAnalytics.ts  useCarrera.ts  useClases.ts  (+4 more)
(+21 files in other folders)
